Added user functionality

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,7 +12,7 @@
           <h1 class="display-4">Welcome to Movie Search!</h1>
           <br>
           <p class="lead text-center">To start searching for a movie simply start typing in the text box below and click on the search
-            button. The 10 most relevant search results will be shown! Want to keep track of your searches or bookmarks some movies? Login or Sign Up!</p>
+            button. The 10 most relevant search results will be shown! Want to keep track of your searches? Login or Sign Up!</p>
         </div>
       </div>
       <div class="row justify-content-center">
