--- a/views/pages/results.ejs
+++ b/views/pages/results.ejs
@@ -27,7 +27,12 @@
                   <%= result["Year"]%>
                 </div>
                 <div class="col-2">
-                  <button type="button" onclick="openModal('<%= result["imdbID"] %>')" class="btn-outline-dark btn-sm"><i class="bi bi-info"></i></button>
+                  <% if (user_id < 0) { %>
+                    <button type="button" onclick="openModal('<%= result["imdbID"] %>')" class="btn-outline-dark btn-sm"><i class="bi bi-info"></i></button>
+                  <% } else { %>
+                    <button type="button" onclick="openModalAndLog('<%= result["imdbID"] %>', '<%= result["Title"]%>', '<%= result["Year"]%>')" class="btn-outline-dark btn-sm"><i
+                        class="bi bi-info"></i></button>
+                  <% } %>
                 </div>
               </div>
             </div>
@@ -36,10 +41,6 @@
         <div class="modal fade" id="<%= result["imdbID"] %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-fetched="false">
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
-              <!-- <div class="modal-header">
-                <h5 class="modal-title" id="<%= result["imdbID"] %>.title"><%= result["Title"]%></h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div> -->
               <div class="modal-body">
                 <div class="row">
                   <div class="col-md-6">
