--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,65 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container justify-content-center">
+  <div class="container">
     <a class="navbar-brand" href="/">Movie Search</a>
+    <div class="dropdown d-flex">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        <i class="bi bi-person"></i> Account
+      </button>
+      <% if (user_id < 0) { %>
+        <div class="dropdown-menu px-md-2" aria-labelledby="dropdownMenuButton1">
+          <nav>
+            <div class="nav nav-tabs" id="nav-tab" role="tablist">
+              <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button"
+                role="tab" aria-controls="nav-home" aria-selected="true">Login</button>
+              <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button"
+                role="tab" aria-controls="nav-profile" aria-selected="false">Sign Up</button>
+            </div>
+          </nav>
+          <div class="tab-content" id="nav-tabContent">
+            <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+              <form action="/login" method="post">
+                <div class="mb-3">
+                  <label for="login-email" class="form-label">Email address</label>
+                  <input type="email" class="form-control" name="email" id="login-email">
+                </div>
+                <div class="mb-3">
+                  <label for="login-password" class="form-label">Password</label>
+                  <input type="password" class="form-control" name="password" id="login-password">
+                </div>
+                <div class="float-right">
+                  <button type="submit" class="btn btn-primary">Log In</button>
+                </div>
+              </form>
+            </div>
+            <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+              <form action="/register" method="post">
+                <div class="mb-3">
+                  <label for="signup-name" class="form-label">Name</label>
+                  <input type="text" class="form-control" name="name" id="signup-name">
+                </div>
+                <div class="mb-3">
+                  <label for="signup-email" class="form-label">Email address</label>
+                  <input type="email" class="form-control" name="email" id="signup-email">
+                </div>
+                <div class="mb-3">
+                  <label for="signup-password" class="form-label">Password</label>
+                  <input type="password" class="form-control" name="password" id="signup-password">
+                </div>
+                <div class="float-right">
+                  <button type="submit" class="btn btn-primary">Sign Up</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      <% } else { %>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+          <li><a class="dropdown-item" href="/history">History</a></li>
+          <li><a class="dropdown-item" href="/logout">Logout</a></li>
+        </ul>
+      <% } %>
+    </div>
+    </div>
   </div>
 </nav>
