--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -47,7 +47,7 @@
                   <input type="password" class="form-control" name="password" id="signup-password">
                 </div>
                 <div class="float-right">
-                  <button type="submit" class="btn btn-primary">Sign Up</button>
+                  <button type="submit" class="btn btn-primary" onclick="signup()">Sign Up</button>
                 </div>
               </form>
             </div>
